--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
-.container{
-    min-height: 100vh;
-    max-width: 1200px;
-    margin: auto;
+.container {
+     /* min-height: 100vh; */
+     max-width: 1200px;
+     margin: auto;
 }
