--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -1,6 +1,27 @@
 .login{
+    height: 100vh;
+    /* margin-top: 10%; */
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    justify-content: space-around;
+}
+
+.whitebg{
+    background-color: #FFFFFF14;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100px;
+    margin:  0 auto;
+    text-align: center;
+    font-size: 40px;
+    border-radius: 10px;
+}
+
+.btn-grp{
+    display: flex;
+    flex-direction: column;
+    row-gap: 50px;
 }
