--- a/src/components/TxtInput/TxtInput.css
+++ b/src/components/TxtInput/TxtInput.css
@@ -1,3 +1,8 @@
+.TINmainCont{
+    width: fit-content;
+}
+
+
 input{
     background-color: #FFFFFF14;
     border-radius: 5px;
@@ -8,6 +13,12 @@ input{
     padding-left: 20px;
     color: #CAD5E2;
     caret-color: #CAD5E2;
+    /* box-sizing: border-box; */
+}
+
+.Tlabel{
+    margin-bottom: 6.5px;
+    display: inline-block;
 }
 
 ::placeholder {
