--- a/src/Pages/hospital/hospital.css
+++ b/src/Pages/hospital/hospital.css
@@ -13,7 +13,7 @@
   text-align: center;
   color: #cad5e2;
   background: #ffffff14 0% 0% no-repeat padding-box;
-  border-radius: 20px;
+  border-radius: 10px;
   opacity: 1;
   margin-top: 50px;
   margin-bottom: 50px;
@@ -35,12 +35,12 @@
 .item {
   display: flex;
   flex-direction: row;
-  justify-content:flex-start;
+  justify-content: flex-start;
   color: #cad5e2;
   background: #ffffff14 0% 0% no-repeat padding-box;
-  border-radius: 20px;
+  border-radius: 10px;
   opacity: 1;
-  height: 80px;
+  height: 60px;
   padding: 15px 10px 10px 15px;
   width: 60vh;
   margin-top: 10px;
@@ -51,8 +51,8 @@
 .avatar {
   margin-top: 10px;
   margin-right: 10px;
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
 }
 .item_details {
@@ -69,6 +69,11 @@
   margin-right: 15px;
   margin-top: 10px;
   font-size: 12px;
+}
+.hos-head-font {
+  font-size: 20px;
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
 @media only screen and (max-width: 600px) {
   .bio-hos {
