--- a/src/Pages/Approval/approv.css
+++ b/src/Pages/Approval/approv.css
@@ -1,4 +1,4 @@
-.head1{
+.head1 {
     box-sizing: border-box;
     border-radius: 10px;
     height: 80px;
@@ -7,39 +7,44 @@
     display: flexbox;
     text-align: center;
     justify-items: center;
-     font-size: 28px;
-     margin: auto;
+    font-size: 28px;
+    margin: auto;
     font-weight: 400;
-    background: #FFFFFF14 0% 0% no-repeat padding-box;;
+    background: #FFFFFF14 0% 0% no-repeat padding-box;
+    ;
 }
 
-.nmage{
-    display:flexbox;
+.nmage {
+    display: flexbox;
     align-items: center;
     justify-content: space-between;
     margin: 0px;
 }
 
-.cont1{
+.cont1 {
     margin: 0px;
     padding: 0px;
 }
 
 
-.date,.Dep{
+.date,
+.Dep {
     margin-left: 80px;
     font: normal normal normal 23px/28px Montserrat;
-letter-spacing: 0px;
-color: #FFFFFF;
+    letter-spacing: 0px;
+    color: #FFFFFF;
 }
 
-.Dep{
+.Dep {
     margin-bottom: 30px;
 }
-.date{ margin-bottom: 20px;
-   padding-top: 45px;}
 
-.MainHead1{
+.date {
+    margin-bottom: 20px;
+    padding-top: 45px;
+}
+
+.MainHead1 {
     vertical-align: middle;
     align-items: center;
     width: auto;
@@ -50,77 +55,79 @@ color: #FFFFFF;
     margin-bottom: 20px;
 }
 
-.Alltxt{
+.Alltxt {
     margin-left: 80px;
     max-height: min-content;
     display: inline-flex;
 }
 
-.cont1{
+.cont1 {
     display: inline-block;
     align-items: center;
 }
 
 
-.col2{
+.col2 {
     margin-left: 70px;
     margin-right: 60px;
 }
 
-.Upload{
+.Upload {
     display: flex;
     justify-content: center;
 }
 
-.b1{   
-  max-height: fit-content;
-  align-items: center;
-  padding: 20px 20px;
-  vertical-align: middle;
-  height: 500px;
-  width: fit-content;
-   overflow-y: scroll;
+.b1 {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+
+    justify-content: center;
+    height: 20vh;
+    width: 98%;
+    overflow-y: scroll;
+    overflow-x: hidden;
+   
 }
 
-.lis11{
-   height: 12vh;
-   align-items: center;
-   background: #FFFFFF0F 0% 0% no-repeat padding-box;
-    margin-top: 20px;
-width: auto;
-padding: 20px;
-opacity: 60%;
-list-style-type:none;
-display: flex;
-border-radius: 10px;
-min-width: max-content;
-min-height: max-content;
+.lis11 {
+
+    background: #FFFFFF0F 0% 0% no-repeat padding-box;
+    margin: 10px;
+    padding: 10px;
+    opacity: 60%;
+    display: flex;
+    align-items: center;
+    border-radius: 10px;
 }
 
 
-.btncont{
-margin-left: 0px;
-margin-top: 10px;
-margin-left: 380px;
-margin-right: 145px;
+.btncont {
+    margin-left: 0px;
+    margin-top: 10px;
+    margin-left: 380px;
+    margin-right: 145px;
 }
-.subli11{
-display: inline-flex;
-    align-content: center; 
-    align-items: center;  
-    justify-content: center; 
-width: fit-content;
-padding: 20px 30px;
+
+.subli11 {
+    display: inline-flex;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+    width: fit-content;
+    padding: 20px 30px;
 }
 
 /* .paintent-records{
 
 } */
-.hd1,.bdy1{
+.hd1,
+.bdy1 {
     font-size: 30px;
-    
+
 }
-.head1{
+
+.head1 {
     font-size: 40px;
     height: auto;
     margin: auto;
@@ -128,20 +135,23 @@ padding: 20px 30px;
     width: auto;
 }
 
-.bdy1{
+.bdy1 {
     background: #FFFFFF14 0% 0% no-repeat padding-box;
     border-radius: 20px;
     width: 800px;
     height: 400px;
-    align-items:center ;
+    align-items: center;
     padding: 50px;
 }
-.paitens-records,.lab-records,.doc-records{
+
+.paitens-records,
+.lab-records,
+.doc-records {
     text-align: center;
-    
+
     width: 100px;
     height: 50px;
-   
+
     color: white;
     background-color: #7116854f;
     border-radius: 10px;
@@ -149,34 +159,47 @@ padding: 20px 30px;
     justify-content: center;
 }
 
-.cont1{
+.cont1 {
     justify-content: center;
     vertical-align: middle;
 }
 
-/* .btns:hover{
-    background-color:  #71168580;
-    transition: background-color ease-in-out 100ms;
-} */
-.total{align-content: center;
-flex-direction: column;
-    vertical-align: middle;
+.total {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    height: 90vh;
 }
-.body12{
-    width: fit-content;
-    margin-left: 150px;
-    height: 500px;
-    box-sizing: border-box;
+
+.body102 {
+    width: 80%;
+    height: 98%;
     background: #ffffff14 0% 0% no-repeat padding-box;
     border-radius: 13px;
     color: white;
-    margin-top: 40px;
-    width: fit-content;
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    vertical-align: middle;
+    margin: 20px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+.body103{
+    width: 70%;
+    height: 98%;
+    background: #ffffff14 0% 0% no-repeat padding-box;
+    border-radius: 13px;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
-.nmage{
+.nmage {
     margin-bottom: 10px;
     margin-right: 300px;
 }
