--- a/src/Pages/PatientRegistration/PatientReg.css
+++ b/src/Pages/PatientRegistration/PatientReg.css
@@ -9,7 +9,7 @@
     font-size: 20px;
     border-radius: 10px;
     width: fit-content;
-    padding: 0 80px;
+    padding: 20px 80px;
     margin: 0 auto;
 }
 
