--- a/src/Pages/login/login.css
+++ b/src/Pages/login/login.css
@@ -25,3 +25,9 @@
     flex-direction: column;
     row-gap: 50px;
 }
+
+.btn-reg-grp{
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+}
