--- a/src/Pages/MedicRepoView/repo.css
+++ b/src/Pages/MedicRepoView/repo.css
@@ -108,3 +108,55 @@ color: #FFFFFF;
     width: auto;
     height: 10vh;
 }
+
+
+.input--mfile {
+    position: relative;
+    color: #7f7f7f;
+    padding-top: 0px;
+    width: 0%;
+  }
+  
+  .input--mfile input[type="file"] {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    opacity: 0;
+    padding-top: 0px;
+    padding-left: 0px;
+  }
+.testrep1{
+    margin-top: 20px;
+    padding: 10px;
+    background-color: #FFFFFF14;
+    border-radius: 5px 5px 0px 0px;
+}
+.Scanrep1{
+    margin-top: 20px;
+    padding: 10px;
+    background-color: #FFFFFF14;
+    border-radius: 5px 5px 0px 0px;
+}
+  .Testrepofile{
+    display: flex;
+    align-items: baseline;
+    background-color: #FFFFFF14;
+    border-radius: 0px 0px 5px 5px;
+    border: none;
+    border-bottom: 5px solid #711685;
+    padding-left: 20px;
+    color: #CAD5E2;
+    caret-color: #CAD5E2;
+  }
+.Scanrepofile{
+    display: flex;
+    align-items: baseline;
+    background-color: #FFFFFF14;
+    border-radius: 0px 0px 5px 5px;
+    border: none;
+    border-bottom: 5px solid #711685;
+    padding-left: 20px;
+    color: #CAD5E2;
+    caret-color: #CAD5E2;
+}
