--- a/src/Pages/hospital/hospital.css
+++ b/src/Pages/hospital/hospital.css
@@ -75,6 +75,15 @@
   margin-bottom: 10px;
   margin-top: 10px;
 }
+.qr-lbl{
+  font-size: 14px;
+  margin-bottom: 5px;
+  margin-top: 10px;
+  text-decoration: underline;
+}
+.qr-lbl:hover{
+  cursor: pointer;
+}
 @media only screen and (max-width: 600px) {
   .bio-hos {
     padding: 15px 50px;
