--- a/src/Pages/patient/patient.css
+++ b/src/Pages/patient/patient.css
@@ -8,6 +8,22 @@
   align-items: center;
   padding-top: 10px;
 }
+.bio_pat {
+  padding: 15px 50px;
+  width: 50%;
+  text-align: center;
+  color: #cad5e2;
+  background: #ffffff14 0% 0% no-repeat padding-box;
+  border-radius: 10px;
+  opacity: 1;
+  height: 60px;
+  margin-top: 50px;
+  font-size: 20px;
+  margin-bottom: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .pt_profile {
   padding: 10px 10px;
   display: flex;
