--- a/src/components/button/btn.css
+++ b/src/components/button/btn.css
@@ -8,9 +8,11 @@
     background-color: #7116854f;
     border-radius: 10px;
     border: none;
+    
 }
 
 .button:hover{
     background-color:  #71168580;
     transition: background-color ease-in-out 100ms;
+    cursor: pointer;
 }
