--- a/src/Pages/Approval/approv.css
+++ b/src/Pages/Approval/approv.css
@@ -99,6 +99,7 @@
     display: flex;
     align-items: center;
     border-radius: 10px;
+    width: 880px;
 }
 
 
@@ -114,7 +115,7 @@
     align-content: center;
     align-items: center;
     justify-content: center;
-    width: fit-content;
+    width: 100%;
     padding: 20px 30px;
 }
 
