--- a/src/Pages/DoctorDash/DocDash.css
+++ b/src/Pages/DoctorDash/DocDash.css
@@ -5,9 +5,13 @@ body {
     min-width: fit-content;
     min-height: fit-content;    
 }
-.details{
+.details111{
     padding: 0%;
     margin: 0px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+   line-height: 25px;
 text-align: left;
 position: center;
 color: aliceblue;
@@ -64,6 +68,7 @@ border-radius: 50%;
     height: 40px;
     width: 40px;
     margin-right: 19px;
+    margin-top: 7px;
 margin-left: 10px;
 padding: 0px;
 position: static;
@@ -100,7 +105,6 @@ min-height: max-content;
     color: white;
     margin: 0px;
     align-items: center;
-    width: 900px;
     overflow-y: scroll;
 }
 
@@ -135,10 +139,11 @@ vertical-align: middle;
 .subli1{
     line-height: 0.5;
     align-items: center;
-   display: flexbox;
-   justify-content: space-around;
+   display: flex;
+   justify-content: space-between;
+   flex-direction: column;
     margin-top: 6px;
-    width: 55vh;
+margin-right: 150px;
 }
 
 .subli4{
@@ -152,6 +157,5 @@ align-content: center;
 margin:0%;
 margin-bottom: 0px;
 vertical-align: middle;
-
 }
 
