--- a/src/Pages/DoctorDash/DocDash.css
+++ b/src/Pages/DoctorDash/DocDash.css
@@ -5,13 +5,9 @@ body {
     min-width: fit-content;
     min-height: fit-content;    
 }
-.details111{
+.details{
     padding: 0%;
     margin: 0px;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-   line-height: 25px;
 text-align: left;
 position: center;
 color: aliceblue;
@@ -68,7 +64,6 @@ border-radius: 50%;
     height: 40px;
     width: 40px;
     margin-right: 19px;
-    margin-top: 7px;
 margin-left: 10px;
 padding: 0px;
 position: static;
@@ -105,6 +100,7 @@ min-height: max-content;
     color: white;
     margin: 0px;
     align-items: center;
+    width: 900px;
     overflow-y: scroll;
 }
 
@@ -139,11 +135,10 @@ vertical-align: middle;
 .subli1{
     line-height: 0.5;
     align-items: center;
-   display: flex;
-   justify-content: space-between;
-   flex-direction: column;
+   display: flexbox;
+   justify-content: space-around;
     margin-top: 6px;
-margin-right: 150px;
+    width: 55vh;
 }
 
 .subli4{
@@ -157,5 +152,6 @@ align-content: center;
 margin:0%;
 margin-bottom: 0px;
 vertical-align: middle;
+
 }
 
