--- a/src/Pages/DoctorDash/DocDash.css
+++ b/src/Pages/DoctorDash/DocDash.css
@@ -3,96 +3,122 @@ body {
     padding: 15px;
     background-color: #120E43;
     min-width: fit-content;
-    min-height: fit-content;    
+    min-height: fit-content;
 }
-.details{
-    padding: 0%;
-    margin: 0px;
-text-align: left;
-position: center;
-color: aliceblue;
+
+.entire{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
-.tx1{
+
+#docdashOut {
+
+    height: 20%;
+}
+
+.docheading {
+    height: 20%;
+    padding: 10px;
+    margin-left: 20px;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    /* position: center; */
+    color: aliceblue;
+}
+
+.tx1 {
     font-weight: 400px;
     color: white;
 }
-.topbar2{
+
+.topbar2 {
+    /* display: flex; */
     box-sizing: content-box;
     background: #FFFFFF0F 0% 0% no-repeat padding-box;
-    margin-top: 10px;
+    /* margin-top: 10px;
     margin-bottom: 10px;
-    margin-right: 80px;
-height: 100px;
-opacity: 60%;
-padding: 18px;
-line-height: 0px;
-text-align: center;
-position: center;
-display: flex;
-justify-items: left;
-border-radius: 10px;
+    margin-right: 80px; */
+    height: 80%;
+    opacity: 60%;
+    padding: 18px;
+    text-align: center;
+    position: center;
+    display: flex;
+    justify-items: left;
+    border-radius: 10px;
 }
 
-.topbar1{
-height: auto;
-width: auto;
-margin-top: 40px;
-display: flex;
-justify-content: center;
-vertical-align: middle;
-margin-bottom: 30px;
-margin-left: 70px;
+.topbar1 {
+    height: 30%;
+    width: 60%;
+    margin-top: 40px;
+    display: flex;
+    justify-content: center;
+    vertical-align: middle;
+    margin-bottom: 30px;
+    margin-left: 70px;
 }
 
-.Obj{
+.Obj {
     background: #FFFFFF14 0% 0% no-repeat padding-box;
-border-radius: 50%;
+    border-radius: 50%;
     height: 90px;
     width: 90px;
     display: flex;
-justify-content: space-evenly;
-padding: 0px;
-margin-right: 19px;
-margin-left: 10px;
-margin-top: 5px;
-content: url("../hospital/logo192.png");
+    justify-content: space-evenly;
+    padding: 0px;
+    margin-right: 19px;
+    margin-left: 10px;
+    margin-top: 5px;
+    content: url("../hospital/logo192.png");
 }
 
-.obj1,.obj2,.obj3,.obj4{
+.obj1,
+.obj2,
+.obj3,
+.obj4 {
     background: #FFFFFF14 0% 0% no-repeat padding-box;
-border-radius: 50%;
+    border-radius: 50%;
     height: 40px;
     width: 40px;
     margin-right: 19px;
-margin-left: 10px;
-padding: 0px;
-position: static;
-content: url("../hospital/logo192.png");
+    margin-left: 10px;
+    padding: 0px;
+    position: static;
+    content: url("../hospital/logo192.png");
 }
 
 
-.mainlis{align-items: center;
+.mainlis {
+    align-items: center;
     display: contents;
     justify-items: inline;
     vertical-align: middle;
     margin: 0%;
 }
 
-.lis1,.lis2,.lis3,.lis4{
+.lis1,
+.lis2,
+.lis3,
+.lis4 {
     background: #FFFFFF0F 0% 0% no-repeat padding-box;
     margin-top: 20px;
-width: auto;
-padding: 15px;
-height: auto;
-opacity: 60%;
-padding: 8px;
-list-style-type:none;
-display: flex;
-border-radius: 10px;
-min-width: max-content;
-min-height: max-content;
+    width: auto;
+    padding: 15px;
+    height: 20%;
+    opacity: 60%;
+    padding: 8px;
+    list-style-type: none;
+    display: flex;
+    border-radius: 10px;
+    min-width: max-content;
+    min-height: max-content;
 }
-.container1{
+
+.container1 {
     box-sizing: border-box;
     padding: 10px;
     background: #ffffff14 0% 0% no-repeat padding-box;
@@ -106,52 +132,62 @@ min-height: max-content;
 
 ::-webkit-scrollbar {
     width: 2px;
-  }
+}
 
-.bt1,.bt2,.bt3,.bt4,.wbt1,.wbt2,.wbt3,.wbt4{
+.bt1,
+.bt2,
+.bt3,
+.bt4,
+.wbt1,
+.wbt2,
+.wbt3,
+.wbt4 {
     box-sizing: border-box;
     height: 45px;
     width: fit-content;
     margin-bottom: 18px;
     background: #7116854F 0% 0% no-repeat padding-box;
-border-radius: 10px;
-padding: 3px;
-color: white;
-display: inline-flex;
-text-align: center;
-box-shadow: none;
-align-items: center;
-border-width: 0.01px;
-justify-content: space-around;
-align-self: flex;
-vertical-align: middle;
+    border-radius: 10px;
+    padding: 3px;
+    color: white;
+    display: inline-flex;
+    text-align: center;
+    box-shadow: none;
+    align-items: center;
+    border-width: 0.01px;
+    justify-content: space-around;
+    align-self: flex;
+    vertical-align: middle;
 }
 
-.wbt1,.wbt2,.wbt3,.wbt4{
+.wbt1,
+.wbt2,
+.wbt3,
+.wbt4 {
     margin-left: 143px;
     margin-right: 30px;
 }
 
-.subli1{
+.subli1 {
+    height: 20%;
     line-height: 0.5;
     align-items: center;
-   display: flexbox;
-   justify-content: space-around;
+    display: flexbox;
+    justify-content: space-around;
     margin-top: 6px;
     width: 55vh;
 }
 
-.subli4{
-display: inline-flex;
-justify-content: space-around;
-align-content: center;
+.subli4 {
+    display: inline-flex;
+    justify-content: space-around;
+    align-content: center;
 
 }
 
-.container2{
-margin:0%;
-margin-bottom: 0px;
-vertical-align: middle;
+.container2 {
+    margin: 0%;
+    margin-bottom: 0px;
+    vertical-align: middle;
 
 }
-
