--- a/src/Pages/Approval/approv.css
+++ b/src/Pages/Approval/approv.css
@@ -103,6 +103,21 @@
     width: 98%;
 }
 
+.listing-approve {
+
+    background: #FFFFFF0F 0% 0% no-repeat padding-box;
+    /* margin: 10px; */
+    margin-bottom: 10px;
+    padding: 5px;
+    opacity: 60%;
+    display: flex;
+    align-items: center;
+    border-radius: 10px;
+    width: 98%;
+}
+
+
+
 
 .btncont {
     margin-left: 0px;
@@ -112,6 +127,15 @@
 }
 
 .subli11 {
+    display: inline-flex;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+    width: 95%;
+    padding: 10px;
+}
+
+.sublist {
     display: inline-flex;
     align-content: center;
     align-items: center;
@@ -187,6 +211,22 @@
     margin: 20px;
     overflow-y: scroll;
 }
+
+.bodyList {
+    padding: 20px;
+    width: 90%;
+    height: 98%;
+    background: #ffffff14 0% 0% no-repeat padding-box;
+    border-radius: 13px;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    margin: 20px;
+    overflow-y: scroll;
+}
+
+
+
 .body103{
     width: 70%;
     height: 98%;
