--- a/src/Pages/DoctorDash/DocDash.css
+++ b/src/Pages/DoctorDash/DocDash.css
@@ -87,7 +87,7 @@ body {
     margin-left: 10px;
     padding: 0px;
     position: static;
-    content: url("../hospital/logo192.png");
+    /* content: url("../hospital/logo192.png"); */
 }
 
 
