--- a/src/Pages/Approval/approv.css
+++ b/src/Pages/Approval/approv.css
@@ -14,11 +14,8 @@
     ;
 }
 
-.nmage {
-    display: flexbox;
-    align-items: center;
-    justify-content: space-between;
-    margin: 0px;
+.fsize{
+    font-size: 15px;
 }
 
 .cont1 {
@@ -88,6 +85,19 @@
     overflow-y: scroll;
     overflow-x: hidden;
    
+}
+
+.plist{
+    display: flex;
+    background: #FFFFFF0F 0% 0% no-repeat padding-box;
+    /* margin: 10px; */
+    margin-bottom: 10px;
+    padding: 10px;
+    opacity: 60%;
+    display: flex;
+    align-items: center;
+    border-radius: 10px;
+    width: 98%;
 }
 
 .lis11 {
@@ -286,7 +296,7 @@
 
 
 .nmage {
-    width: 80%;
+    width: 90%;
     margin-bottom: 10px;
     margin-right: 30px;
 }
