--- a/src/Pages/Approval/RegDetails/regdetails.css
+++ b/src/Pages/Approval/RegDetails/regdetails.css
@@ -5,8 +5,9 @@
     vertical-align: middle;
     border-radius: 20px;
     width: 1000px;
-    height: 580px;
-    resize: none;
+    height: fit-content;
+    /* resize: none; */
+    font-size: 12px;
 }
 
 .pbody2 {
@@ -24,6 +25,7 @@
 .imgcontact {
     display: flex;
     justify-items: center;
+    align-items: center;
     margin-bottom: 10px;
     height: auto;
 }
@@ -45,7 +47,7 @@
     border-radius: 12px;
     padding: 20px;
     width: 30%;
-    height: 100%;
+    height: 35vh;
     resize: none;
 }
 
@@ -59,6 +61,7 @@
     justify-content: center;
     resize: none;
     height: 40%;
+    font-size: 12px;
 }
 
 .medhistry {
@@ -68,7 +71,7 @@
     margin-left: 30px;
     padding: 20px;
     width: 30%;
-    height: 100%;
+    height: 35h;
     resize: none;
 }
 
@@ -79,7 +82,7 @@
     margin-left: 30px;
     padding: 20px;
     width: 30%;
-    height: 100%;
+    height: 35vh;
     resize: none;
 }
 
@@ -88,7 +91,7 @@
     opacity: 1;
     border-radius: 12px;
     margin-left: 20px;
-    width: 70%;
+    width: 80%;
     padding: 15px;
     height: 80%;
     resize: none;
@@ -119,6 +122,14 @@
     text-align: center;
 
     content: url("../../../../public/logo192.png");
+}
+
+.mb-5{
+    margin-bottom: 5px;
+    margin-top: 2px;
+    border-style: dashed;    
+    border-color: #FFFFFF0F 0% 0% no-repeat padding-box;
+    opacity: 0.4;
 }
 
 .dimg1 {
@@ -223,6 +234,7 @@
 tr,
 td {
     padding: 10px;
+    margin: 0%;
 }
 
 tr {
@@ -273,4 +285,10 @@ tr {
     border-radius: 12px;
     padding: 15px;
     margin-bottom: 30px;
+}
+
+.pbtns{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
