--- a/src/Pages/MedicRepoView/repo.css
+++ b/src/Pages/MedicRepoView/repo.css
@@ -52,20 +52,19 @@
 }
 
 .date1,
-.Dep1 {
-    margin-left: 80px;
-    font: normal normal normal 23px/28px Montserrat;
-    letter-spacing: 0px;
-    color: #FFFFFF;
-}
-
+.Dep1,
 .h {
     margin-left: 80px;
-    font: normal normal normal 23px/28px Montserrat;
+    font: normal normal normal 18px Montserrat;
     letter-spacing: 0px;
     color: #FFFFFF;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
+
+.date1{
+    margin-top: 20px;
+}
+
 
 /* .Dep{
     margin-bottom: 30px;
