--- a/src/Pages/DoctorDash/DocDash.css
+++ b/src/Pages/DoctorDash/DocDash.css
@@ -72,7 +72,7 @@ body1 {
     margin-right: 19px;
     margin-left: 10px;
     margin-top: 5px;
-    content: url("../hospital/logo192.png");
+    /* content: url("../hospital/logo192.png"); */
 }
 
 .obj1,
@@ -87,7 +87,7 @@ body1 {
     margin-left: 10px;
     padding: 0px;
     position: static;
-    content: url("../hospital/logo192.png");
+    /* content: url("../hospital/logo192.png"); */
 }
 
 
@@ -126,6 +126,27 @@ body1 {
     margin: 0px;
     align-items: center;
     overflow-y: scroll;
+}
+
+.qr-lbl-1{
+    margin-top: 5px;
+    margin-bottom: 5px;
+    border: solid rgb(255, 254, 254) 1px;
+    border-radius: 10px;
+    width: fit-content;
+    padding: 5px;
+    cursor: pointer;
+
+}
+
+.qr-lbl-1:hover{
+    color: rgb(4, 4, 4);
+    background-color: rgb(255, 255, 255);
+}
+
+.noPatient{
+    text-align: center;
+    width: 900px;
 }
 
 ::-webkit-scrollbar {
