--- a/src/Pages/patient/patient.css
+++ b/src/Pages/patient/patient.css
@@ -231,19 +231,27 @@ a.font_field {
 .pth_journal_font {
   font-size: 16px;
 }
-.cross-cancel:hover{
+.cross-cancel:hover {
   cursor: pointer;
 }
-.bio-pres{
+.bio-pres {
   width: 40%;
 }
-.item-size{
+.item-size {
   height: 20vh;
   text-align: left;
   overflow-y: scroll;
 }
-.pres_font{
+.pres_font {
   margin-top: 5px;
+}
+.hyper {
+  font-size: 10px;
+  margin-top: 5px;
+  text-decoration: underline;
+}
+.hyper:hover {
+  cursor: pointer;
 }
 @media only screen and (max-width: 900px) {
   .patient {
